examples/bad/auto_return6.latf
auto f() {
    if (true) {
        
    }
    else {
        return true;
    }
    return 0; // error - different return types
}

int main() {
    return 0;
}